Add AWS S3 placeholder configuration - credentials must be set via environment variables

--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ SECRET_KEY=your-secret-key-keep-it-secret
 
 # Default Password
 DEFAULT_PASSWORD=Default@123
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+AWS_REGION=eu-west-1
+S3_BUCKET=saving-api-photos
