--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 DATABASE_URL=postgresql://saving_7jm4_user:07tw4wkpd92YWBqCPK3cg6NdyiWSkCFf@dpg-d42v8m1r0fns739ppbq0-a.oregon-postgres.render.com/saving_7jm4
 
 # API Configuration
-API_BASE_URL=http://10.111.71.126:8000
+API_BASE_URL=http://172.20.59.126:8000/
 
 # Security
 SECRET_KEY=your-secret-key-keep-it-secret
