Fix Render deployment 503 error - Add database connection validation and error handling - Update render.yaml with proper DATABASE_URL configuration - Add startup event to verify database connection - Improve logging for better debugging

--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,12 @@ services:
     env: docker
     dockerfilePath: ./Dockerfile
     plan: free
+    healthCheckPath: /
     envVars:
       - key: DATABASE_URL
-        sync: false
+        fromDatabase:
+          name: saving-7jm4
+          property: connectionString
       - key: API_BASE_URL
         sync: false
       - key: SECRET_KEY
