--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ AWS_ACCESS_KEY_ID=your-aws-access-key-id
 AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_REGION=eu-west-1
 S3_BUCKET=saving-api-photos
+
+# Firebase Service Account Configuration
+
