Remove test files and fix database schema for Supabase

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Database Configuration
 # DATABASE_URL=postgresql://saving_7jm4_user:07tw4wkpd92YWBqCPK3cg6NdyiWSkCFf@dpg-d42v8m1r0fns739ppbq0-a.oregon-postgres.render.com/saving_7jm4
 # DATABASE_URL=postgresql://postgres:vPHo1pX9REfxhoTD3msj@mababa-db.cluster-czgossm62ngg.eu-west-1.rds.amazonaws.com/postgres
-DATABASE_URL=postgresql://postgres.klgiypbuqblpzaihabda:jDif6WN2QcIHUJ3b@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
+DATABASE_URL=postgresql://postgres.klgiypbuqblpzaihabda:QlYZdcVy9Fm6bUSI@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
 # API Configuration
 API_BASE_URL=http://172.20.59.126:8000/
 
