fix profile image issue

--- a/.env
+++ b/.env
@@ -12,10 +12,9 @@ SECRET_KEY=your-secret-key-keep-it-secret
 DEFAULT_PASSWORD=Default@123
 
 # AWS S3 Configuration
-AWS_ACCESS_KEY_ID=your-aws-access-key-id
-AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
-AWS_REGION=eu-west-1
-S3_BUCKET=saving-api-photos
+SUPABASE_KEY=sb_secret_7xpZog5lcHCCQyd0UWglSA_5u1G-iXN
+SUPABASE_BUCKET=policy_files
+SUPABASE_URL=https://klgiypbuqblpzaihabda.supabase.co
 
 # Firebase Service Account Configuration
 FIREBASE_PROJECT_ID=techmix-d3dde
