add login with google

--- a/.env
+++ b/.env
@@ -11,6 +11,9 @@ SECRET_KEY=your-secret-key-keep-it-secret
 # Default Password
 DEFAULT_PASSWORD=Default@123
 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=608257324954-b9cmt84033nka0prljm3n3kh1dnhmrcs.apps.googleusercontent.com
+
 # AWS S3 Configuration
 SUPABASE_KEY=sb_secret_7xpZog5lcHCCQyd0UWglSA_5u1G-iXN
 SUPABASE_BUCKET=policy_files
